test/libsolidity/syntaxTests/freeFunctions/free_call_via_contract_type.sol
contract C {
    function f() public pure {}
}
function fun() {
    C.f();
}
// ----
// TypeError 3419: (68-73): Cannot call function via contract type name.
